updatedb/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> update_statement
Rule 2     statement -> select_statement
Rule 3     statement -> delete_statement
Rule 4     update_statement -> UPDATE ID SET set_clause_list EOL
Rule 5     update_statement -> UPDATE ID SET set_clause_list WHERE search_condition EOL
Rule 6     select_statement -> SELECT select_columns FROM id_list EOL
Rule 7     select_statement -> SELECT select_columns FROM id_list join_clause EOL
Rule 8     select_statement -> SELECT select_columns FROM id_list WHERE search_condition EOL
Rule 9     select_statement -> SELECT select_columns FROM id_list join_clause WHERE search_condition EOL
Rule 10    delete_statement -> DELETE FROM ID EOL
Rule 11    delete_statement -> DELETE FROM ID WHERE search_condition EOL
Rule 12    select_columns -> ALL
Rule 13    select_columns -> id_list
Rule 14    set_clause_list -> ID EQ literal
Rule 15    set_clause_list -> ID EQ literal COMMA set_clause_list
Rule 16    join_clause -> NATURAL JOIN ID
Rule 17    join_clause -> NATURAL JOIN ID join_clause
Rule 18    join_clause -> join_list
Rule 19    join_clause -> join_list ON join_value EQ join_value
Rule 20    join_clause -> join_list ON join_value EQ join_value join_clause
Rule 21    join_clause -> join_list ON join_value EQ join_value join_search_condition
Rule 22    join_list -> JOIN ID
Rule 23    join_list -> JOIN ID join_list
Rule 24    join_value -> ID
Rule 25    join_value -> ID DOT ID
Rule 26    join_value -> literal
Rule 27    join_search_condition -> AND join_search_condition
Rule 28    join_search_condition -> OR join_search_condition
Rule 29    join_search_condition -> LPAREN join_search_condition RPAREN
Rule 30    join_search_condition -> comparison_predicate
Rule 31    search_condition -> search_condition OR search_condition
Rule 32    search_condition -> search_condition AND search_condition
Rule 33    search_condition -> LPAREN search_condition RPAREN
Rule 34    search_condition -> comparison_predicate
Rule 35    comparison_predicate -> value comp_op value
Rule 36    comp_op -> EQ
Rule 37    comp_op -> NEQ
Rule 38    comp_op -> GT
Rule 39    comp_op -> LT
Rule 40    id_list -> ID
Rule 41    id_list -> ID DOT ID
Rule 42    id_list -> id_list COMMA ID
Rule 43    id_list -> id_list COMMA ID DOT ID
Rule 44    inner_select_statement -> SELECT select_columns FROM id_list
Rule 45    inner_select_statement -> SELECT select_columns FROM id_list join_clause
Rule 46    inner_select_statement -> SELECT select_columns FROM id_list WHERE search_condition
Rule 47    inner_select_statement -> SELECT select_columns FROM id_list join_clause WHERE search_condition
Rule 48    value -> ID
Rule 49    value -> ID DOT ID
Rule 50    value -> literal
Rule 51    value -> LPAREN inner_select_statement RPAREN
Rule 52    literal -> INT
Rule 53    literal -> DOUBLE
Rule 54    literal -> STRING

Terminals, with rules where they appear

ALL                  : 12
AND                  : 27 32
COMMA                : 15 42 43
DELETE               : 10 11
DOT                  : 25 41 43 49
DOUBLE               : 53
EOL                  : 4 5 6 7 8 9 10 11
EQ                   : 14 15 19 20 21 36
FROM                 : 6 7 8 9 10 11 44 45 46 47
GT                   : 38
ID                   : 4 5 10 11 14 15 16 17 22 23 24 25 25 40 41 41 42 43 43 48 49 49
INT                  : 52
JOIN                 : 16 17 22 23
LPAREN               : 29 33 51
LT                   : 39
NATURAL              : 16 17
NEQ                  : 37
ON                   : 19 20 21
OR                   : 28 31
RPAREN               : 29 33 51
SELECT               : 6 7 8 9 44 45 46 47
SET                  : 4 5
STRING               : 54
UPDATE               : 4 5
WHERE                : 5 8 9 11 46 47
error                : 

Nonterminals, with rules where they appear

comp_op              : 35
comparison_predicate : 30 34
delete_statement     : 3
id_list              : 6 7 8 9 13 42 43 44 45 46 47
inner_select_statement : 51
join_clause          : 7 9 17 20 45 47
join_list            : 18 19 20 21 23
join_search_condition : 21 27 28 29
join_value           : 19 19 20 20 21 21
literal              : 14 15 26 50
search_condition     : 5 8 9 11 31 31 32 32 33 46 47
select_columns       : 6 7 8 9 44 45 46 47
select_statement     : 2
set_clause_list      : 4 5 15
statement            : 0
update_statement     : 1
value                : 35 35

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . update_statement
    (2) statement -> . select_statement
    (3) statement -> . delete_statement
    (4) update_statement -> . UPDATE ID SET set_clause_list EOL
    (5) update_statement -> . UPDATE ID SET set_clause_list WHERE search_condition EOL
    (6) select_statement -> . SELECT select_columns FROM id_list EOL
    (7) select_statement -> . SELECT select_columns FROM id_list join_clause EOL
    (8) select_statement -> . SELECT select_columns FROM id_list WHERE search_condition EOL
    (9) select_statement -> . SELECT select_columns FROM id_list join_clause WHERE search_condition EOL
    (10) delete_statement -> . DELETE FROM ID EOL
    (11) delete_statement -> . DELETE FROM ID WHERE search_condition EOL

    UPDATE          shift and go to state 2
    SELECT          shift and go to state 3
    DELETE          shift and go to state 7

    update_statement               shift and go to state 5
    select_statement               shift and go to state 1
    statement                      shift and go to state 6
    delete_statement               shift and go to state 4

state 1

    (2) statement -> select_statement .

    $end            reduce using rule 2 (statement -> select_statement .)


state 2

    (4) update_statement -> UPDATE . ID SET set_clause_list EOL
    (5) update_statement -> UPDATE . ID SET set_clause_list WHERE search_condition EOL

    ID              shift and go to state 8


state 3

    (6) select_statement -> SELECT . select_columns FROM id_list EOL
    (7) select_statement -> SELECT . select_columns FROM id_list join_clause EOL
    (8) select_statement -> SELECT . select_columns FROM id_list WHERE search_condition EOL
    (9) select_statement -> SELECT . select_columns FROM id_list join_clause WHERE search_condition EOL
    (12) select_columns -> . ALL
    (13) select_columns -> . id_list
    (40) id_list -> . ID
    (41) id_list -> . ID DOT ID
    (42) id_list -> . id_list COMMA ID
    (43) id_list -> . id_list COMMA ID DOT ID

    ALL             shift and go to state 11
    ID              shift and go to state 9

    id_list                        shift and go to state 12
    select_columns                 shift and go to state 10

state 4

    (3) statement -> delete_statement .

    $end            reduce using rule 3 (statement -> delete_statement .)


state 5

    (1) statement -> update_statement .

    $end            reduce using rule 1 (statement -> update_statement .)


state 6

    (0) S' -> statement .



state 7

    (10) delete_statement -> DELETE . FROM ID EOL
    (11) delete_statement -> DELETE . FROM ID WHERE search_condition EOL

    FROM            shift and go to state 13


state 8

    (4) update_statement -> UPDATE ID . SET set_clause_list EOL
    (5) update_statement -> UPDATE ID . SET set_clause_list WHERE search_condition EOL

    SET             shift and go to state 14


state 9

    (40) id_list -> ID .
    (41) id_list -> ID . DOT ID

    COMMA           reduce using rule 40 (id_list -> ID .)
    FROM            reduce using rule 40 (id_list -> ID .)
    EOL             reduce using rule 40 (id_list -> ID .)
    WHERE           reduce using rule 40 (id_list -> ID .)
    NATURAL         reduce using rule 40 (id_list -> ID .)
    JOIN            reduce using rule 40 (id_list -> ID .)
    RPAREN          reduce using rule 40 (id_list -> ID .)
    DOT             shift and go to state 15


state 10

    (6) select_statement -> SELECT select_columns . FROM id_list EOL
    (7) select_statement -> SELECT select_columns . FROM id_list join_clause EOL
    (8) select_statement -> SELECT select_columns . FROM id_list WHERE search_condition EOL
    (9) select_statement -> SELECT select_columns . FROM id_list join_clause WHERE search_condition EOL

    FROM            shift and go to state 16


state 11

    (12) select_columns -> ALL .

    FROM            reduce using rule 12 (select_columns -> ALL .)


state 12

    (13) select_columns -> id_list .
    (42) id_list -> id_list . COMMA ID
    (43) id_list -> id_list . COMMA ID DOT ID

    FROM            reduce using rule 13 (select_columns -> id_list .)
    COMMA           shift and go to state 17


state 13

    (10) delete_statement -> DELETE FROM . ID EOL
    (11) delete_statement -> DELETE FROM . ID WHERE search_condition EOL

    ID              shift and go to state 18


state 14

    (4) update_statement -> UPDATE ID SET . set_clause_list EOL
    (5) update_statement -> UPDATE ID SET . set_clause_list WHERE search_condition EOL
    (14) set_clause_list -> . ID EQ literal
    (15) set_clause_list -> . ID EQ literal COMMA set_clause_list

    ID              shift and go to state 19

    set_clause_list                shift and go to state 20

state 15

    (41) id_list -> ID DOT . ID

    ID              shift and go to state 21


state 16

    (6) select_statement -> SELECT select_columns FROM . id_list EOL
    (7) select_statement -> SELECT select_columns FROM . id_list join_clause EOL
    (8) select_statement -> SELECT select_columns FROM . id_list WHERE search_condition EOL
    (9) select_statement -> SELECT select_columns FROM . id_list join_clause WHERE search_condition EOL
    (40) id_list -> . ID
    (41) id_list -> . ID DOT ID
    (42) id_list -> . id_list COMMA ID
    (43) id_list -> . id_list COMMA ID DOT ID

    ID              shift and go to state 9

    id_list                        shift and go to state 22

state 17

    (42) id_list -> id_list COMMA . ID
    (43) id_list -> id_list COMMA . ID DOT ID

    ID              shift and go to state 23


state 18

    (10) delete_statement -> DELETE FROM ID . EOL
    (11) delete_statement -> DELETE FROM ID . WHERE search_condition EOL

    EOL             shift and go to state 25
    WHERE           shift and go to state 24


state 19

    (14) set_clause_list -> ID . EQ literal
    (15) set_clause_list -> ID . EQ literal COMMA set_clause_list

    EQ              shift and go to state 26


state 20

    (4) update_statement -> UPDATE ID SET set_clause_list . EOL
    (5) update_statement -> UPDATE ID SET set_clause_list . WHERE search_condition EOL

    EOL             shift and go to state 28
    WHERE           shift and go to state 27


state 21

    (41) id_list -> ID DOT ID .

    COMMA           reduce using rule 41 (id_list -> ID DOT ID .)
    FROM            reduce using rule 41 (id_list -> ID DOT ID .)
    EOL             reduce using rule 41 (id_list -> ID DOT ID .)
    WHERE           reduce using rule 41 (id_list -> ID DOT ID .)
    NATURAL         reduce using rule 41 (id_list -> ID DOT ID .)
    JOIN            reduce using rule 41 (id_list -> ID DOT ID .)
    RPAREN          reduce using rule 41 (id_list -> ID DOT ID .)


state 22

    (6) select_statement -> SELECT select_columns FROM id_list . EOL
    (7) select_statement -> SELECT select_columns FROM id_list . join_clause EOL
    (8) select_statement -> SELECT select_columns FROM id_list . WHERE search_condition EOL
    (9) select_statement -> SELECT select_columns FROM id_list . join_clause WHERE search_condition EOL
    (42) id_list -> id_list . COMMA ID
    (43) id_list -> id_list . COMMA ID DOT ID
    (16) join_clause -> . NATURAL JOIN ID
    (17) join_clause -> . NATURAL JOIN ID join_clause
    (18) join_clause -> . join_list
    (19) join_clause -> . join_list ON join_value EQ join_value
    (20) join_clause -> . join_list ON join_value EQ join_value join_clause
    (21) join_clause -> . join_list ON join_value EQ join_value join_search_condition
    (22) join_list -> . JOIN ID
    (23) join_list -> . JOIN ID join_list

    EOL             shift and go to state 30
    WHERE           shift and go to state 29
    COMMA           shift and go to state 17
    NATURAL         shift and go to state 31
    JOIN            shift and go to state 34

    join_clause                    shift and go to state 32
    join_list                      shift and go to state 33

state 23

    (42) id_list -> id_list COMMA ID .
    (43) id_list -> id_list COMMA ID . DOT ID

    COMMA           reduce using rule 42 (id_list -> id_list COMMA ID .)
    FROM            reduce using rule 42 (id_list -> id_list COMMA ID .)
    EOL             reduce using rule 42 (id_list -> id_list COMMA ID .)
    WHERE           reduce using rule 42 (id_list -> id_list COMMA ID .)
    NATURAL         reduce using rule 42 (id_list -> id_list COMMA ID .)
    JOIN            reduce using rule 42 (id_list -> id_list COMMA ID .)
    RPAREN          reduce using rule 42 (id_list -> id_list COMMA ID .)
    DOT             shift and go to state 35


state 24

    (11) delete_statement -> DELETE FROM ID WHERE . search_condition EOL
    (31) search_condition -> . search_condition OR search_condition
    (32) search_condition -> . search_condition AND search_condition
    (33) search_condition -> . LPAREN search_condition RPAREN
    (34) search_condition -> . comparison_predicate
    (35) comparison_predicate -> . value comp_op value
    (48) value -> . ID
    (49) value -> . ID DOT ID
    (50) value -> . literal
    (51) value -> . LPAREN inner_select_statement RPAREN
    (52) literal -> . INT
    (53) literal -> . DOUBLE
    (54) literal -> . STRING

    LPAREN          shift and go to state 40
    ID              shift and go to state 36
    INT             shift and go to state 37
    DOUBLE          shift and go to state 44
    STRING          shift and go to state 38

    comparison_predicate           shift and go to state 42
    search_condition               shift and go to state 43
    literal                        shift and go to state 39
    value                          shift and go to state 41

state 25

    (10) delete_statement -> DELETE FROM ID EOL .

    $end            reduce using rule 10 (delete_statement -> DELETE FROM ID EOL .)


state 26

    (14) set_clause_list -> ID EQ . literal
    (15) set_clause_list -> ID EQ . literal COMMA set_clause_list
    (52) literal -> . INT
    (53) literal -> . DOUBLE
    (54) literal -> . STRING

    INT             shift and go to state 37
    DOUBLE          shift and go to state 44
    STRING          shift and go to state 38

    literal                        shift and go to state 45

state 27

    (5) update_statement -> UPDATE ID SET set_clause_list WHERE . search_condition EOL
    (31) search_condition -> . search_condition OR search_condition
    (32) search_condition -> . search_condition AND search_condition
    (33) search_condition -> . LPAREN search_condition RPAREN
    (34) search_condition -> . comparison_predicate
    (35) comparison_predicate -> . value comp_op value
    (48) value -> . ID
    (49) value -> . ID DOT ID
    (50) value -> . literal
    (51) value -> . LPAREN inner_select_statement RPAREN
    (52) literal -> . INT
    (53) literal -> . DOUBLE
    (54) literal -> . STRING

    LPAREN          shift and go to state 40
    ID              shift and go to state 36
    INT             shift and go to state 37
    DOUBLE          shift and go to state 44
    STRING          shift and go to state 38

    comparison_predicate           shift and go to state 42
    search_condition               shift and go to state 46
    literal                        shift and go to state 39
    value                          shift and go to state 41

state 28

    (4) update_statement -> UPDATE ID SET set_clause_list EOL .

    $end            reduce using rule 4 (update_statement -> UPDATE ID SET set_clause_list EOL .)


state 29

    (8) select_statement -> SELECT select_columns FROM id_list WHERE . search_condition EOL
    (31) search_condition -> . search_condition OR search_condition
    (32) search_condition -> . search_condition AND search_condition
    (33) search_condition -> . LPAREN search_condition RPAREN
    (34) search_condition -> . comparison_predicate
    (35) comparison_predicate -> . value comp_op value
    (48) value -> . ID
    (49) value -> . ID DOT ID
    (50) value -> . literal
    (51) value -> . LPAREN inner_select_statement RPAREN
    (52) literal -> . INT
    (53) literal -> . DOUBLE
    (54) literal -> . STRING

    LPAREN          shift and go to state 40
    ID              shift and go to state 36
    INT             shift and go to state 37
    DOUBLE          shift and go to state 44
    STRING          shift and go to state 38

    comparison_predicate           shift and go to state 42
    search_condition               shift and go to state 47
    literal                        shift and go to state 39
    value                          shift and go to state 41

state 30

    (6) select_statement -> SELECT select_columns FROM id_list EOL .

    $end            reduce using rule 6 (select_statement -> SELECT select_columns FROM id_list EOL .)


state 31

    (16) join_clause -> NATURAL . JOIN ID
    (17) join_clause -> NATURAL . JOIN ID join_clause

    JOIN            shift and go to state 48


state 32

    (7) select_statement -> SELECT select_columns FROM id_list join_clause . EOL
    (9) select_statement -> SELECT select_columns FROM id_list join_clause . WHERE search_condition EOL

    EOL             shift and go to state 50
    WHERE           shift and go to state 49


state 33

    (18) join_clause -> join_list .
    (19) join_clause -> join_list . ON join_value EQ join_value
    (20) join_clause -> join_list . ON join_value EQ join_value join_clause
    (21) join_clause -> join_list . ON join_value EQ join_value join_search_condition

    EOL             reduce using rule 18 (join_clause -> join_list .)
    WHERE           reduce using rule 18 (join_clause -> join_list .)
    RPAREN          reduce using rule 18 (join_clause -> join_list .)
    ON              shift and go to state 51


state 34

    (22) join_list -> JOIN . ID
    (23) join_list -> JOIN . ID join_list

    ID              shift and go to state 52


state 35

    (43) id_list -> id_list COMMA ID DOT . ID

    ID              shift and go to state 53


state 36

    (48) value -> ID .
    (49) value -> ID . DOT ID

    EQ              reduce using rule 48 (value -> ID .)
    NEQ             reduce using rule 48 (value -> ID .)
    GT              reduce using rule 48 (value -> ID .)
    LT              reduce using rule 48 (value -> ID .)
    EOL             reduce using rule 48 (value -> ID .)
    OR              reduce using rule 48 (value -> ID .)
    AND             reduce using rule 48 (value -> ID .)
    RPAREN          reduce using rule 48 (value -> ID .)
    WHERE           reduce using rule 48 (value -> ID .)
    DOT             shift and go to state 54


state 37

    (52) literal -> INT .

    EQ              reduce using rule 52 (literal -> INT .)
    NEQ             reduce using rule 52 (literal -> INT .)
    GT              reduce using rule 52 (literal -> INT .)
    LT              reduce using rule 52 (literal -> INT .)
    EOL             reduce using rule 52 (literal -> INT .)
    OR              reduce using rule 52 (literal -> INT .)
    AND             reduce using rule 52 (literal -> INT .)
    RPAREN          reduce using rule 52 (literal -> INT .)
    WHERE           reduce using rule 52 (literal -> INT .)
    COMMA           reduce using rule 52 (literal -> INT .)
    NATURAL         reduce using rule 52 (literal -> INT .)
    LPAREN          reduce using rule 52 (literal -> INT .)
    JOIN            reduce using rule 52 (literal -> INT .)
    ID              reduce using rule 52 (literal -> INT .)
    INT             reduce using rule 52 (literal -> INT .)
    DOUBLE          reduce using rule 52 (literal -> INT .)
    STRING          reduce using rule 52 (literal -> INT .)


state 38

    (54) literal -> STRING .

    EQ              reduce using rule 54 (literal -> STRING .)
    NEQ             reduce using rule 54 (literal -> STRING .)
    GT              reduce using rule 54 (literal -> STRING .)
    LT              reduce using rule 54 (literal -> STRING .)
    EOL             reduce using rule 54 (literal -> STRING .)
    OR              reduce using rule 54 (literal -> STRING .)
    AND             reduce using rule 54 (literal -> STRING .)
    RPAREN          reduce using rule 54 (literal -> STRING .)
    WHERE           reduce using rule 54 (literal -> STRING .)
    COMMA           reduce using rule 54 (literal -> STRING .)
    NATURAL         reduce using rule 54 (literal -> STRING .)
    LPAREN          reduce using rule 54 (literal -> STRING .)
    JOIN            reduce using rule 54 (literal -> STRING .)
    ID              reduce using rule 54 (literal -> STRING .)
    INT             reduce using rule 54 (literal -> STRING .)
    DOUBLE          reduce using rule 54 (literal -> STRING .)
    STRING          reduce using rule 54 (literal -> STRING .)


state 39

    (50) value -> literal .

    EQ              reduce using rule 50 (value -> literal .)
    NEQ             reduce using rule 50 (value -> literal .)
    GT              reduce using rule 50 (value -> literal .)
    LT              reduce using rule 50 (value -> literal .)
    EOL             reduce using rule 50 (value -> literal .)
    OR              reduce using rule 50 (value -> literal .)
    AND             reduce using rule 50 (value -> literal .)
    RPAREN          reduce using rule 50 (value -> literal .)
    WHERE           reduce using rule 50 (value -> literal .)


state 40

    (33) search_condition -> LPAREN . search_condition RPAREN
    (51) value -> LPAREN . inner_select_statement RPAREN
    (31) search_condition -> . search_condition OR search_condition
    (32) search_condition -> . search_condition AND search_condition
    (33) search_condition -> . LPAREN search_condition RPAREN
    (34) search_condition -> . comparison_predicate
    (44) inner_select_statement -> . SELECT select_columns FROM id_list
    (45) inner_select_statement -> . SELECT select_columns FROM id_list join_clause
    (46) inner_select_statement -> . SELECT select_columns FROM id_list WHERE search_condition
    (47) inner_select_statement -> . SELECT select_columns FROM id_list join_clause WHERE search_condition
    (35) comparison_predicate -> . value comp_op value
    (48) value -> . ID
    (49) value -> . ID DOT ID
    (50) value -> . literal
    (51) value -> . LPAREN inner_select_statement RPAREN
    (52) literal -> . INT
    (53) literal -> . DOUBLE
    (54) literal -> . STRING

    LPAREN          shift and go to state 40
    SELECT          shift and go to state 56
    ID              shift and go to state 36
    INT             shift and go to state 37
    DOUBLE          shift and go to state 44
    STRING          shift and go to state 38

    inner_select_statement         shift and go to state 55
    search_condition               shift and go to state 57
    value                          shift and go to state 41
    literal                        shift and go to state 39
    comparison_predicate           shift and go to state 42

state 41

    (35) comparison_predicate -> value . comp_op value
    (36) comp_op -> . EQ
    (37) comp_op -> . NEQ
    (38) comp_op -> . GT
    (39) comp_op -> . LT

    EQ              shift and go to state 58
    NEQ             shift and go to state 60
    GT              shift and go to state 61
    LT              shift and go to state 62

    comp_op                        shift and go to state 59

state 42

    (34) search_condition -> comparison_predicate .

    OR              reduce using rule 34 (search_condition -> comparison_predicate .)
    AND             reduce using rule 34 (search_condition -> comparison_predicate .)
    EOL             reduce using rule 34 (search_condition -> comparison_predicate .)
    RPAREN          reduce using rule 34 (search_condition -> comparison_predicate .)


state 43

    (11) delete_statement -> DELETE FROM ID WHERE search_condition . EOL
    (31) search_condition -> search_condition . OR search_condition
    (32) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 63
    OR              shift and go to state 64
    AND             shift and go to state 65


state 44

    (53) literal -> DOUBLE .

    EQ              reduce using rule 53 (literal -> DOUBLE .)
    NEQ             reduce using rule 53 (literal -> DOUBLE .)
    GT              reduce using rule 53 (literal -> DOUBLE .)
    LT              reduce using rule 53 (literal -> DOUBLE .)
    EOL             reduce using rule 53 (literal -> DOUBLE .)
    OR              reduce using rule 53 (literal -> DOUBLE .)
    AND             reduce using rule 53 (literal -> DOUBLE .)
    RPAREN          reduce using rule 53 (literal -> DOUBLE .)
    WHERE           reduce using rule 53 (literal -> DOUBLE .)
    COMMA           reduce using rule 53 (literal -> DOUBLE .)
    NATURAL         reduce using rule 53 (literal -> DOUBLE .)
    LPAREN          reduce using rule 53 (literal -> DOUBLE .)
    JOIN            reduce using rule 53 (literal -> DOUBLE .)
    ID              reduce using rule 53 (literal -> DOUBLE .)
    INT             reduce using rule 53 (literal -> DOUBLE .)
    DOUBLE          reduce using rule 53 (literal -> DOUBLE .)
    STRING          reduce using rule 53 (literal -> DOUBLE .)


state 45

    (14) set_clause_list -> ID EQ literal .
    (15) set_clause_list -> ID EQ literal . COMMA set_clause_list

    EOL             reduce using rule 14 (set_clause_list -> ID EQ literal .)
    WHERE           reduce using rule 14 (set_clause_list -> ID EQ literal .)
    COMMA           shift and go to state 66


state 46

    (5) update_statement -> UPDATE ID SET set_clause_list WHERE search_condition . EOL
    (31) search_condition -> search_condition . OR search_condition
    (32) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 67
    OR              shift and go to state 64
    AND             shift and go to state 65


state 47

    (8) select_statement -> SELECT select_columns FROM id_list WHERE search_condition . EOL
    (31) search_condition -> search_condition . OR search_condition
    (32) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 68
    OR              shift and go to state 64
    AND             shift and go to state 65


state 48

    (16) join_clause -> NATURAL JOIN . ID
    (17) join_clause -> NATURAL JOIN . ID join_clause

    ID              shift and go to state 69


state 49

    (9) select_statement -> SELECT select_columns FROM id_list join_clause WHERE . search_condition EOL
    (31) search_condition -> . search_condition OR search_condition
    (32) search_condition -> . search_condition AND search_condition
    (33) search_condition -> . LPAREN search_condition RPAREN
    (34) search_condition -> . comparison_predicate
    (35) comparison_predicate -> . value comp_op value
    (48) value -> . ID
    (49) value -> . ID DOT ID
    (50) value -> . literal
    (51) value -> . LPAREN inner_select_statement RPAREN
    (52) literal -> . INT
    (53) literal -> . DOUBLE
    (54) literal -> . STRING

    LPAREN          shift and go to state 40
    ID              shift and go to state 36
    INT             shift and go to state 37
    DOUBLE          shift and go to state 44
    STRING          shift and go to state 38

    comparison_predicate           shift and go to state 42
    search_condition               shift and go to state 70
    literal                        shift and go to state 39
    value                          shift and go to state 41

state 50

    (7) select_statement -> SELECT select_columns FROM id_list join_clause EOL .

    $end            reduce using rule 7 (select_statement -> SELECT select_columns FROM id_list join_clause EOL .)


state 51

    (19) join_clause -> join_list ON . join_value EQ join_value
    (20) join_clause -> join_list ON . join_value EQ join_value join_clause
    (21) join_clause -> join_list ON . join_value EQ join_value join_search_condition
    (24) join_value -> . ID
    (25) join_value -> . ID DOT ID
    (26) join_value -> . literal
    (52) literal -> . INT
    (53) literal -> . DOUBLE
    (54) literal -> . STRING

    ID              shift and go to state 71
    INT             shift and go to state 37
    DOUBLE          shift and go to state 44
    STRING          shift and go to state 38

    literal                        shift and go to state 73
    join_value                     shift and go to state 72

state 52

    (22) join_list -> JOIN ID .
    (23) join_list -> JOIN ID . join_list
    (22) join_list -> . JOIN ID
    (23) join_list -> . JOIN ID join_list

    ON              reduce using rule 22 (join_list -> JOIN ID .)
    EOL             reduce using rule 22 (join_list -> JOIN ID .)
    WHERE           reduce using rule 22 (join_list -> JOIN ID .)
    RPAREN          reduce using rule 22 (join_list -> JOIN ID .)
    JOIN            shift and go to state 34

    join_list                      shift and go to state 74

state 53

    (43) id_list -> id_list COMMA ID DOT ID .

    COMMA           reduce using rule 43 (id_list -> id_list COMMA ID DOT ID .)
    FROM            reduce using rule 43 (id_list -> id_list COMMA ID DOT ID .)
    EOL             reduce using rule 43 (id_list -> id_list COMMA ID DOT ID .)
    WHERE           reduce using rule 43 (id_list -> id_list COMMA ID DOT ID .)
    NATURAL         reduce using rule 43 (id_list -> id_list COMMA ID DOT ID .)
    JOIN            reduce using rule 43 (id_list -> id_list COMMA ID DOT ID .)
    RPAREN          reduce using rule 43 (id_list -> id_list COMMA ID DOT ID .)


state 54

    (49) value -> ID DOT . ID

    ID              shift and go to state 75


state 55

    (51) value -> LPAREN inner_select_statement . RPAREN

    RPAREN          shift and go to state 76


state 56

    (44) inner_select_statement -> SELECT . select_columns FROM id_list
    (45) inner_select_statement -> SELECT . select_columns FROM id_list join_clause
    (46) inner_select_statement -> SELECT . select_columns FROM id_list WHERE search_condition
    (47) inner_select_statement -> SELECT . select_columns FROM id_list join_clause WHERE search_condition
    (12) select_columns -> . ALL
    (13) select_columns -> . id_list
    (40) id_list -> . ID
    (41) id_list -> . ID DOT ID
    (42) id_list -> . id_list COMMA ID
    (43) id_list -> . id_list COMMA ID DOT ID

    ALL             shift and go to state 11
    ID              shift and go to state 9

    id_list                        shift and go to state 12
    select_columns                 shift and go to state 77

state 57

    (33) search_condition -> LPAREN search_condition . RPAREN
    (31) search_condition -> search_condition . OR search_condition
    (32) search_condition -> search_condition . AND search_condition

    RPAREN          shift and go to state 78
    OR              shift and go to state 64
    AND             shift and go to state 65


state 58

    (36) comp_op -> EQ .

    ID              reduce using rule 36 (comp_op -> EQ .)
    LPAREN          reduce using rule 36 (comp_op -> EQ .)
    INT             reduce using rule 36 (comp_op -> EQ .)
    DOUBLE          reduce using rule 36 (comp_op -> EQ .)
    STRING          reduce using rule 36 (comp_op -> EQ .)


state 59

    (35) comparison_predicate -> value comp_op . value
    (48) value -> . ID
    (49) value -> . ID DOT ID
    (50) value -> . literal
    (51) value -> . LPAREN inner_select_statement RPAREN
    (52) literal -> . INT
    (53) literal -> . DOUBLE
    (54) literal -> . STRING

    ID              shift and go to state 36
    LPAREN          shift and go to state 79
    INT             shift and go to state 37
    DOUBLE          shift and go to state 44
    STRING          shift and go to state 38

    literal                        shift and go to state 39
    value                          shift and go to state 80

state 60

    (37) comp_op -> NEQ .

    ID              reduce using rule 37 (comp_op -> NEQ .)
    LPAREN          reduce using rule 37 (comp_op -> NEQ .)
    INT             reduce using rule 37 (comp_op -> NEQ .)
    DOUBLE          reduce using rule 37 (comp_op -> NEQ .)
    STRING          reduce using rule 37 (comp_op -> NEQ .)


state 61

    (38) comp_op -> GT .

    ID              reduce using rule 38 (comp_op -> GT .)
    LPAREN          reduce using rule 38 (comp_op -> GT .)
    INT             reduce using rule 38 (comp_op -> GT .)
    DOUBLE          reduce using rule 38 (comp_op -> GT .)
    STRING          reduce using rule 38 (comp_op -> GT .)


state 62

    (39) comp_op -> LT .

    ID              reduce using rule 39 (comp_op -> LT .)
    LPAREN          reduce using rule 39 (comp_op -> LT .)
    INT             reduce using rule 39 (comp_op -> LT .)
    DOUBLE          reduce using rule 39 (comp_op -> LT .)
    STRING          reduce using rule 39 (comp_op -> LT .)


state 63

    (11) delete_statement -> DELETE FROM ID WHERE search_condition EOL .

    $end            reduce using rule 11 (delete_statement -> DELETE FROM ID WHERE search_condition EOL .)


state 64

    (31) search_condition -> search_condition OR . search_condition
    (31) search_condition -> . search_condition OR search_condition
    (32) search_condition -> . search_condition AND search_condition
    (33) search_condition -> . LPAREN search_condition RPAREN
    (34) search_condition -> . comparison_predicate
    (35) comparison_predicate -> . value comp_op value
    (48) value -> . ID
    (49) value -> . ID DOT ID
    (50) value -> . literal
    (51) value -> . LPAREN inner_select_statement RPAREN
    (52) literal -> . INT
    (53) literal -> . DOUBLE
    (54) literal -> . STRING

    LPAREN          shift and go to state 40
    ID              shift and go to state 36
    INT             shift and go to state 37
    DOUBLE          shift and go to state 44
    STRING          shift and go to state 38

    comparison_predicate           shift and go to state 42
    search_condition               shift and go to state 81
    literal                        shift and go to state 39
    value                          shift and go to state 41

state 65

    (32) search_condition -> search_condition AND . search_condition
    (31) search_condition -> . search_condition OR search_condition
    (32) search_condition -> . search_condition AND search_condition
    (33) search_condition -> . LPAREN search_condition RPAREN
    (34) search_condition -> . comparison_predicate
    (35) comparison_predicate -> . value comp_op value
    (48) value -> . ID
    (49) value -> . ID DOT ID
    (50) value -> . literal
    (51) value -> . LPAREN inner_select_statement RPAREN
    (52) literal -> . INT
    (53) literal -> . DOUBLE
    (54) literal -> . STRING

    LPAREN          shift and go to state 40
    ID              shift and go to state 36
    INT             shift and go to state 37
    DOUBLE          shift and go to state 44
    STRING          shift and go to state 38

    comparison_predicate           shift and go to state 42
    search_condition               shift and go to state 82
    literal                        shift and go to state 39
    value                          shift and go to state 41

state 66

    (15) set_clause_list -> ID EQ literal COMMA . set_clause_list
    (14) set_clause_list -> . ID EQ literal
    (15) set_clause_list -> . ID EQ literal COMMA set_clause_list

    ID              shift and go to state 19

    set_clause_list                shift and go to state 83

state 67

    (5) update_statement -> UPDATE ID SET set_clause_list WHERE search_condition EOL .

    $end            reduce using rule 5 (update_statement -> UPDATE ID SET set_clause_list WHERE search_condition EOL .)


state 68

    (8) select_statement -> SELECT select_columns FROM id_list WHERE search_condition EOL .

    $end            reduce using rule 8 (select_statement -> SELECT select_columns FROM id_list WHERE search_condition EOL .)


state 69
